--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.arange(1.0' 10.0, 0.1)"
+    "np.arange(1.0, 10.0, 0.1)"
    ]
   },
   {
