--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -1,20 +1,95 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Fundamentals of Data Analysis Winter 2023 Tasks\n",
+    "\n",
+    "**Author: Nur Bujang**\n",
+    "\n",
+    "tasks.ipynb\n",
+    "***"
+   ]
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tasks for Fundamentals of Data Analysis Winter 2023\n",
-    "tasks.ipynb\n",
-    "Author: Nur Bujang"
+    "## Task 1 : Collatz Conjecture\n",
+    "> The Collatz conjecture is a famous unsolved problem in mathe matics. The problem is to prove that if you start with any positive integer x and  repeatedly apply the function f ( x ) below, you al ways get stuck in the repeating sequence 1, 4, 2, 1, 4, 2, . . .\n",
+    "\n",
+    "$$ f(x) =  \\Biggl\\{ $$\n",
+    "\n",
+    "For example, starting with the value 10, which is an even number, we divide it by 2 to get 5. Then 5 is an odd number so, we multiply by 3 and add 1 to get 16. Then we repeatedly divide by 2 to get 8, 4, 2, 1. Once we are at 1, we go back to 4 and get stuck in the repeating sequence 4, 2, 1 as we suspected.\n",
+    "\n",
+    "### Task Description:\n",
+    "*The task is to verify, using Python, that the Collatz conjecture is true for the first 10000 positive integers.*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "    # If x is even, divide it by two.\n",
+    "    if x % 2 ==0:\n",
+    "        return x // 2\n",
+    "    else:\n",
+    "        return (3 * x) + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collatz(x):\n",
+    "    while x != 1:\n",
+    "        print(x, end=', ')\n",
+    "        x = f(x)\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "x = f(x)\n",
+    "Then print out new x value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collatz(10000)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "next is to loop the collatz"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "\n",
+    "## End"
    ]
   }
  ],
