print not verified only

--- a/project.ipynb
+++ b/project.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np # import package\n",
+    "import numpy as np\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
