add 1 in conjecture

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -23,7 +23,7 @@
     "\n",
     "$$ f(x) =  \\Biggl\\{ $$\n",
     "\n",
-    "For example, starting with the value 10, which is an even number, we divide it by 2 to get 5. Then 5 is an odd number so, we multiply by 3 and add 1 to get 16. Then we repeatedly divide by 2 to get 8, 4, 2, 1. Once we are at 1, we go back to 4 and get stuck in the repeating sequence 4, 2, 1 as we suspected.\n",
+    "For example, starting with the value 10, which is an even number, we divide it by 2 to get 5. Then 5 is an odd number so, we multiply by 3 and add 1 to get 16. Then we repeatedly divide by 2 to get 8, 4, 2, 1. **Once we are at 1, we go back to 4 and get stuck in the repeating sequence 4, 2, 1 as we suspected.**\n",
     "\n",
     "### Task Description:\n",
     "*The task is to verify, using Python, that the Collatz conjecture is true for the first 10000 positive integers.*\n"
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,13 +46,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "def collatz(x):\n",
     "    \n",
     "    collatz_list = [] # numbers will be in a list\n",
+    "\n",
+    "    if x == 1: # to include 1 in the list. If not, enter while loop\n",
+    "        collatz_list = [3*x+1]\n",
+    "        collatz_list.append(f(collatz_list[-1])) # append the last element of the sequence\n",
+    "        collatz_list.append(x)\n",
+    "        return collatz_list\n",
     "\n",
     "    while x != 1: # while loop\n",
     "        x = f(x) \n",
@@ -63,16 +69,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 not verified\n",
-      "2 not verified\n",
-      "4 not verified\n"
+      "2 not verified [1]\n",
+      "4 not verified [2, 1]\n"
      ]
     }
    ],
@@ -82,7 +87,7 @@
     "    output = collatz(i)\n",
     "\n",
     "    if output[-3:] != [4, 2, 1]: # slicing and comparing, that the last 3 numbers of the output will always end with 4, 2, 1\n",
-    "        print(i, \"not verified\")\n",
+    "        print(i, \"not verified\", output)\n",
     "\n",
     "# if verified ending with 4, 2, 1, list will start with 3, 5, 6........... (4 not included)\n",
     "    # if output[-3:] == [4,2,1]: # slicing and comparing\n",
