--- a/project.ipynb
+++ b/project.ipynb
@@ -14,6 +14,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The project is to create a notebook investigating the variables and data points within the well-known iris flower data set associated with Ronald A Fisher.(1)\n",
+    "\n",
+    "In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
+    "\n",
+    "Select, demonstrate, and explain the most appropriate summary statistics to describe each variable.\n",
+    "\n",
+    "Select, demonstrate, and explain the most appropriate plot(s) for each variable.\n",
+    "\n",
+    "The notebook should follow a cohesive narrative about the data set."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
