--- a/project.ipynb
+++ b/project.ipynb
@@ -17,44 +17,112 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The project is to create a notebook investigating the variables and data points within the well-known iris flower data set associated with Ronald A Fisher.(1)\n",
+    "> The project is to create a notebook investigating the variables and data points within the well-known iris flower data set associated with Ronald A Fisher.(1)\n",
     "\n",
-    "In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
+    "> In the notebook, you should discuss the classification of each variable within the data set according to common variable types and scales of measurement in mathematics, statistics, and Python.\n",
     "\n",
-    "Select, demonstrate, and explain the most appropriate summary statistics to describe each variable.\n",
+    "> Select, demonstrate, and explain the most appropriate summary statistics to describe each variable.\n",
     "\n",
-    "Select, demonstrate, and explain the most appropriate plot(s) for each variable.\n",
+    "> Select, demonstrate, and explain the most appropriate plot(s) for each variable.\n",
     "\n",
-    "The notebook should follow a cohesive narrative about the data set."
+    "> The notebook should follow a cohesive narrative about the data set."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "import numpy as np # for computational operations\n",
+    "import pandas as pd # for data loading from other sources and processing\n",
+    "import matplotlib.pyplot as plt # for data visualization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The first 2 lines of the dataset\n",
+      "    sepal_length  sepal_width  petal_length  petal_width   class\n",
+      "0           5.1          3.5           1.4          0.2  setosa\n",
+      "1           4.9          3.0           1.4          0.2  setosa\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('iris.csv') # df contains iris.csv\n",
+    "print('\\nThe first 2 lines of the dataset\\n',df.head(2))  # print out first 2 lines "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Quick lookover of the dataset**\n",
+    "\n",
+    "The dataset iris.data contains 5 columns and 150 lines (replicates), consisting of 3 classes of 50 instances each. \n",
+    "\n",
+    "There are four measurement of a particular external flower structure (the length (in cm) and width (in cm) of the sepal and petal) to morphologically determine or identify whether it is one of three species: Iris setosa, I. versicolor or I. virginica.\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The number of rows for each Iris species\n",
+      " class\n",
+      "setosa        50\n",
+      "versicolor    50\n",
+      "virginica     50\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.value_counts(\"class\")  # value_counts funtion to see how many lines for each species\n",
+    "print('\\nThe number of rows for each Iris species\\n',df.value_counts(\"class\"))  # print how many lines for each species"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 150 entries, 0 to 149\n",
+      "Data columns (total 5 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   sepal_length  150 non-null    float64\n",
+      " 1   sepal_width   150 non-null    float64\n",
+      " 2   petal_length  150 non-null    float64\n",
+      " 3   petal_width   150 non-null    float64\n",
+      " 4   class         150 non-null    object \n",
+      "dtypes: float64(4), object(1)\n",
+      "memory usage: 6.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "attachments": {},
