--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -28,15 +28,15 @@
     "\\end{cases}\n",
     "\\end{align*}\n",
     "\n",
-    "For example, starting with the value 10, which is an even number, we divide it by 2 to get 5. Then 5 is an odd number so, we multiply by 3 and add 1 to get 16. Then we repeatedly divide by 2 to get 8, 4, 2, 1. **Once we are at 1, we go back to 4 and get stuck in the repeating sequence 4, 2, 1 as we suspected.**\n",
+    "> For example, starting with the value 10, which is an even number, we divide it by 2 to get 5. Then 5 is an odd number so, we multiply by 3 and add 1 to get 16. Then we repeatedly divide by 2 to get 8, 4, 2, 1. **Once we are at 1, we go back to 4 and get stuck in the repeating sequence 4, 2, 1 as we suspected.**\n",
     "\n",
     "### Task Description:\n",
-    "The task is to verify, using Python, that the Collatz conjecture is true for the first 10000 positive integers.\n"
+    "> The task is to verify, using Python, that the Collatz conjecture is true for the first 10000 positive integers.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Collatz Conjecture is true the first 10000 positive integers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for verification of the first 10000 positive integers\n",
     "\n",
@@ -92,7 +84,115 @@
     "> Give an overview of the famous penguins data set and explain the types of variables it contains. \n",
     "\n",
     "### Task Description: \n",
-    "The task is to suggest the types of variables that should be used to model them in Python and to explain your rationale."
+    "> The task is to suggest the types of variables that should be used to model them in Python and to explain your rationale."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np # for computational operations\n",
+    "import pandas as pd # for data loading from other sources and processing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "The first 2 lines of the dataset\n",
+      "   species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+      "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
+      "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
+      "\n",
+      "   body_mass_g     sex  \n",
+      "0       3750.0    MALE  \n",
+      "1       3800.0  FEMALE  \n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('penguins.csv') # df contains penguins.csv\n",
+    "print('\\nThe first 2 lines of the dataset\\n',df.head(2))  # print out first 2 lines "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "df.dtypes will provide the data type of each column. \n",
+    "\n",
+    "df.info() will give an output containing the number of rows and columns, column names and their data types and the number of non-null (not missing) values of each column. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species               object\n",
+      "island                object\n",
+      "bill_length_mm       float64\n",
+      "bill_depth_mm        float64\n",
+      "flipper_length_mm    float64\n",
+      "body_mass_g          float64\n",
+      "sex                   object\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "# df.info() OR\n",
+    "data_types = df.dtypes\n",
+    "print(data_types)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "From the output, the first (species), second (island) and seventh (sex) columns are objects. It is a categorical data type, which is a type of qualitative data, meaning it can only fall into one distinct group. The species, island and sex are nominal types of categorical data which has no order or ranking. The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\".\n",
+    "\n",
+    "\n",
+    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type in quantitative. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale and has a true zero point.\n",
+    "\n",
+    "To further specify the type of object, "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rationale for selecting variable types for modeling depends on the question and types of analysis we want to perform. For example, we can use all the quantitative data to predict species classification and in regression analysis, where we can predict one variable from other features. Different variable types will also determine the type of data visualization techniques, such as pie charts, scatter plots and histograms. Understanding and specifying data types is important tor analysis and ensuring that the operations are performed correctly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Task 3 : Penguins Data Set Distribution Model** \n",
+    "> For each of the variables in the penguins data set():\n",
+    "\n",
+    "### Task Description:\n",
+    "> The task is to suggest what probability distribution from the numpy random distributions list is the most appropriate to model the variable"
    ]
   },
   {
@@ -110,9 +210,67 @@
    "source": []
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## **Task 4 : Head Probability** \n",
+    "> Suppose you are flipping two coins, each with a probability p of giving heads.\n",
+    "\n",
+    "### Task Description:\n",
+    "> The task is to plot the entropy of the total number of heads versus p."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **Task 5 : Penguins Data Set Plots** \n",
+    "> Penguins data set.\n",
+    "\n",
+    "### Task Description:\n",
+    "> The task is to create an appropriate individual plot for each of the variables in the penguin data set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "***\n",
     "\n",
