penguin float vs integers

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -99,28 +99,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The first 2 lines of the dataset\n",
-      "   species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
-      "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
-      "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
-      "\n",
-      "   body_mass_g     sex  \n",
-      "0       3750.0    MALE  \n",
-      "1       3800.0  FEMALE  \n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181.0</td>\n",
+       "      <td>3750.0</td>\n",
+       "      <td>MALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>17.4</td>\n",
+       "      <td>186.0</td>\n",
+       "      <td>3800.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>3250.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>19.3</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>3450.0</td>\n",
+       "      <td>FEMALE</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0  Adelie  Torgersen            39.1           18.7              181.0   \n",
+       "1  Adelie  Torgersen            39.5           17.4              186.0   \n",
+       "2  Adelie  Torgersen            40.3           18.0              195.0   \n",
+       "3  Adelie  Torgersen             NaN            NaN                NaN   \n",
+       "4  Adelie  Torgersen            36.7           19.3              193.0   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0       3750.0    MALE  \n",
+       "1       3800.0  FEMALE  \n",
+       "2       3250.0  FEMALE  \n",
+       "3          NaN     NaN  \n",
+       "4       3450.0  FEMALE  "
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "df = pd.read_csv('penguins.csv') # df contains penguins.csv\n",
-    "print('\\nThe first 2 lines of the dataset\\n',df.head(2))  # print out first 2 lines "
+    "df.head()"
    ]
   },
   {
@@ -164,9 +254,9 @@
    "source": [
     "From the output, the first (species), second (island) and seventh (sex) columns are objects. It is a categorical data type, which is a type of qualitative data, meaning it can only fall into one distinct group. The species, island and sex are nominal types of categorical data which has no order or ranking. The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\".\n",
     "\n",
-    "\n",
     "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type in quantitative. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale and has a true zero point.\n",
     "\n",
+    "HOWEVER, the flipper length and body mass are actually integers, not floats. \n",
     "To further specify the type of object, "
    ]
   },
