--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The Collatz Conjecture is true the first 10000 positive integers.\n"
+     ]
+    }
+   ],
    "source": [
     "# for verification of the first 10000 positive integers\n",
     "\n",
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -203,13 +211,13 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('penguins.csv') # df contains penguins.csv\n",
+    "df = pd.read_csv('penguins.csv') # import penguins.csv\n",
     "df.head()"
    ]
   },
@@ -224,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +253,7 @@
    "source": [
     "# df.info() OR\n",
     "data_types = df.dtypes\n",
-    "print(data_types)\n"
+    "print(data_types)"
    ]
   },
   {
@@ -254,18 +262,176 @@
    "source": [
     "From the output, the first (species), second (island) and seventh (sex) columns are objects. It is a categorical data type, which is a type of qualitative data, meaning it can only fall into one distinct group. The species, island and sex are nominal types of categorical data which has no order or ranking. The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\".\n",
     "\n",
-    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type in quantitative. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale and has a true zero point.\n",
-    "\n",
-    "HOWEVER, the flipper length and body mass are actually integers, not floats. \n",
-    "To further specify the type of object, "
+    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type in quantitative. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale and has a true zero point."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species column is a string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# To specify the type of object:\n",
+    "\n",
+    "element = df.at[0, 'species'] # row 0 (line 1 of data), column species\n",
+    "if isinstance(element, str):\n",
+    "    print(\"species column is a string.\")\n",
+    "else:\n",
+    "    print(\"species column is not a string.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "island column is a string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = df.at[0, 'island']\n",
+    "if isinstance(element, str):\n",
+    "    print(\"island column is a string.\")\n",
+    "else:\n",
+    "    print(\"island column is not a string.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sex column is not a string.\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = df.at[3, 'sex'] # line with missing data. \n",
+    "if isinstance(element, str):\n",
+    "    print(\"sex column is a string.\")\n",
+    "else:\n",
+    "    print(\"sex column is not a string.\")\n",
+    "\n",
+    "# string is a more specialized text data type compared to the generic object data type. \n",
+    "# However, only do this if we are confident that these columns exclusively contain strings and that you don't need to handle mixed data types or missing values within those columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "String is a more specialized text data type compared to the generic object data type. However, we can only do this if we are confident that these columns only contain strings and when we do not need to handle mixed data types or missing values within those columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bill length and bill depth columns are floats.\n",
+    "\n",
+    "**HOWEVER, flipper length and body mass are actually integers, not floats.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bill_length_mm column is not an int.\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = df.at[0, 'bill_length_mm']\n",
+    "if isinstance(element, int):\n",
+    "    print(\"bill_length_mm column is an int.\")\n",
+    "else:\n",
+    "    print(\"bill_length_mm column is not an int.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bill_depth_mm column is not an int.\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = df.at[0, 'bill_depth_mm']\n",
+    "if isinstance(element, int):\n",
+    "    print(\"bill_depth_mm column is an int.\")\n",
+    "else:\n",
+    "    print(\"bill_depth_mm column is not an int.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flipper_length_mm column is not an int.\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = df.at[0, 'flipper_length_mm']\n",
+    "if isinstance(element, int):\n",
+    "    print(\"flipper_length_mm column is an int.\")\n",
+    "else:\n",
+    "    print(\"flipper_length_mm column is not an int.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "body_mass_g column is not an int.\n"
+     ]
+    }
+   ],
+   "source": [
+    "element = df.at[0, 'flipper_length_mm']\n",
+    "if isinstance(element, int):\n",
+    "    print(\"body_mass_g column is an int.\")\n",
+    "else:\n",
+    "    print(\"body_mass_g column is not an int.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,9 +524,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (10476636.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[67], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    ***\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "***\n",
     "\n",
