penguin df.at markdown cleanup

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -327,10 +327,7 @@
     "if isinstance(element, str):\n",
     "    print(\"sex column is a string.\")\n",
     "else:\n",
-    "    print(\"sex column is not a string.\")\n",
-    "\n",
-    "# string is a more specialized text data type compared to the generic object data type. \n",
-    "# However, only do this if we are confident that these columns exclusively contain strings and that you don't need to handle mixed data types or missing values within those columns."
+    "    print(\"sex column is not a string.\")"
    ]
   },
   {
@@ -523,19 +520,8 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": 67,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (10476636.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[67], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    ***\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "***\n",
     "\n",
