simplified int/not int code

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 58,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -323,7 +323,7 @@
     }
    ],
    "source": [
-    "element = df.at[3, 'sex'] # line with missing data. \n",
+    "element = df.at[3, 'sex'] # line with missing data. If row is changed to 0, it will output a string\n",
     "if isinstance(element, str):\n",
     "    print(\"sex column is a string.\")\n",
     "else:\n",
@@ -348,93 +348,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "bill_length_mm column is not an int.\n"
-     ]
-    }
-   ],
-   "source": [
-    "element = df.at[0, 'bill_length_mm']\n",
-    "if isinstance(element, int):\n",
-    "    print(\"bill_length_mm column is an int.\")\n",
-    "else:\n",
-    "    print(\"bill_length_mm column is not an int.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "bill_depth_mm column is not an int.\n"
-     ]
-    }
-   ],
-   "source": [
-    "element = df.at[0, 'bill_depth_mm']\n",
-    "if isinstance(element, int):\n",
-    "    print(\"bill_depth_mm column is an int.\")\n",
-    "else:\n",
-    "    print(\"bill_depth_mm column is not an int.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "flipper_length_mm column is not an int.\n"
-     ]
-    }
-   ],
-   "source": [
-    "element = df.at[0, 'flipper_length_mm']\n",
-    "if isinstance(element, int):\n",
-    "    print(\"flipper_length_mm column is an int.\")\n",
-    "else:\n",
-    "    print(\"flipper_length_mm column is not an int.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "bill_length_mm column is not an int.\n",
+      "bill_depth_mm column is not an int.\n",
+      "flipper_length_mm column is not an int.\n",
       "body_mass_g column is not an int.\n"
      ]
     }
    ],
    "source": [
-    "element = df.at[0, 'flipper_length_mm']\n",
-    "if isinstance(element, int):\n",
-    "    print(\"body_mass_g column is an int.\")\n",
-    "else:\n",
-    "    print(\"body_mass_g column is not an int.\")"
+    "columns_to_check = ['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']\n",
+    "\n",
+    "for column_name in columns_to_check:\n",
+    "    element = df.at[0, column_name]\n",
+    "    if isinstance(element, int):\n",
+    "        print(f\"{column_name} column is an int.\")\n",
+    "    else:\n",
+    "        print(f\"{column_name} column is not an int.\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rationale for selecting variable types for modeling depends on the question and types of analysis we want to perform. For example, we can use all the quantitative data to predict species classification and in regression analysis, where we can predict one variable from other features. Different variable types will also determine the type of data visualization techniques, such as pie charts, scatter plots and histograms. Understanding and specifying data types is important tor analysis and ensuring that the operations are performed correctly."
+    "The rationale for selecting variable types for modeling depends on the question and types of analysis we want to perform. For example, we can use all the quantitative data to predict species classification and in regression analysis, where we can predict one variable from other features. Different variable types will also determine the type of data visualization techniques, such as pie charts, scatter plots and histograms. Understanding and specifying data types is important tor analysis and ensuring that the operations are performed correctly.\n",
+    "\n",
+    "With that in mind, and because there are missing values, we suggest that flipper length and body mass be converted into floats using astype"
    ]
   },
   {
