--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -218,7 +218,7 @@
    ],
    "source": [
     "df = pd.read_csv('penguins.csv') # import penguins.csv\n",
-    "df.head()"
+    "df.head() # show the default first few lines of the dataframe"
    ]
   },
   {
@@ -251,8 +251,7 @@
     }
    ],
    "source": [
-    "# df.info() OR\n",
-    "data_types = df.dtypes\n",
+    "data_types = df.dtypes # OR df.info()\n",
     "print(data_types)"
    ]
   },
@@ -338,15 +337,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Bill length and bill depth columns are floats.\n",
-    "\n",
-    "**HOWEVER, flipper length and body mass are actually integers, not floats.**"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -377,9 +367,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The rationale for selecting variable types for modeling depends on the question and types of analysis we want to perform. For example, we can use all the quantitative data to predict species classification and in regression analysis, where we can predict one variable from other features. Different variable types will also determine the type of data visualization techniques, such as pie charts, scatter plots and histograms. Understanding and specifying data types is important tor analysis and ensuring that the operations are performed correctly.\n",
+    "Bill length and bill depth columns are floats.\n",
     "\n",
-    "With that in mind, and because there are missing values, we suggest that flipper length and body mass be converted into floats using astype"
+    "**HOWEVER, flipper length and body mass are actually integers in the penguins.csv data file.**\n",
+    "\n",
+    "The rationale for selecting variable types for modeling depends on the question and types of analysis we want to perform. For example, we can use all the quantitative data to predict species classification and in regression analysis, where we can predict one variable from other features. Different variable types will also determine the appropriate type of data visualization techniques, such as pie charts, scatter plots and histograms. Understanding and specifying data types is important for the right analysis and to ensure that the operations are performed correctly."
    ]
   },
   {
