--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -266,74 +266,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "species column is a string.\n"
+      "species column is a string.\n",
+      "island column is a string.\n",
+      "sex column is not a string.\n"
      ]
     }
    ],
    "source": [
     "# To specify the type of object:\n",
     "\n",
-    "element = df.at[0, 'species'] # row 0 (line 1 of data), column species\n",
-    "if isinstance(element, str):\n",
-    "    print(\"species column is a string.\")\n",
-    "else:\n",
-    "    print(\"species column is not a string.\")"
+    "columns_to_check = ['species', 'island', 'sex']\n",
+    "\n",
+    "for column_name in columns_to_check:\n",
+    "    if pd.api.types.is_string_dtype(df[column_name]):\n",
+    "        print(f\"{column_name} column is a string.\")\n",
+    "    else:\n",
+    "        print(f\"{column_name} column is not a string.\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "# # OR we can check by 1 row and 1 column:\n",
+    "\n",
+    "# element = df.at[0, 'sex'] # if row is changed to 3 (line with missing data), it will output NOT a string\n",
+    "# if isinstance(element, str):\n",
+    "#     print(\"sex column is a string.\")\n",
+    "# else:\n",
+    "#     print(\"sex column is not a string.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "island column is a string.\n"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 344 entries, 0 to 343\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column             Non-Null Count  Dtype  \n",
+      "---  ------             --------------  -----  \n",
+      " 0   species            344 non-null    object \n",
+      " 1   island             344 non-null    object \n",
+      " 2   bill_length_mm     342 non-null    float64\n",
+      " 3   bill_depth_mm      342 non-null    float64\n",
+      " 4   flipper_length_mm  342 non-null    float64\n",
+      " 5   body_mass_g        342 non-null    float64\n",
+      " 6   sex                333 non-null    object \n",
+      "dtypes: float64(4), object(3)\n",
+      "memory usage: 18.9+ KB\n"
      ]
     }
    ],
    "source": [
-    "element = df.at[0, 'island']\n",
-    "if isinstance(element, str):\n",
-    "    print(\"island column is a string.\")\n",
-    "else:\n",
-    "    print(\"island column is not a string.\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "sex column is not a string.\n"
-     ]
-    }
-   ],
-   "source": [
-    "element = df.at[3, 'sex'] # line with missing data. If row is changed to 0, it will output a string\n",
-    "if isinstance(element, str):\n",
-    "    print(\"sex column is a string.\")\n",
-    "else:\n",
-    "    print(\"sex column is not a string.\")"
+    "df.info()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "String is a more specialized text data type compared to the generic object data type. However, we can only do this if we are confident that these columns only contain strings and when we do not need to handle mixed data types or missing values within those columns."
+    "String is a more specialized text data type compared to the generic object data type. However, we can only do this if we are confident that these columns only contain strings and when we do not need to handle mixed data types or missing values within those columns. \n",
+    "\n",
+    "Hence, the reason why the sex column is listed as not a string is because of missing data."
    ]
   },
   {
