for loop try except else to solve float vs int

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,17 +56,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The Collatz Conjecture is true the first 10000 positive integers.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# for verification of the first 10000 positive integers\n",
     "\n",
@@ -88,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Task 2 : Penguins Data Set Description\n",
+    "## Task 2 : Penguins Data Set Variables\n",
     "> Give an overview of the famous penguins data set and explain the types of variables it contains. \n",
     "\n",
     "### Task Description: \n",
@@ -97,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +203,7 @@
        "4       3450.0  FEMALE  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -259,90 +251,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the output, the first (species), second (island) and seventh (sex) columns are objects. It is a categorical data type, which is a type of qualitative data, meaning it can only fall into one distinct group. The species, island and sex are nominal types of categorical data which has no order or ranking. The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\".\n",
+    "From the output, the first (species), second (island) and seventh (sex) columns are objects. These objects are strings. String is a more specialized text data type compared to the generic object data type. Strings are not categorical data type but they can be made into categories. In this instance, it is a categorical data type, which is a type of qualitative data, meaning it can only fall into a select group. The three species are Adelie, Chinstrap, and Gentoo. The three islands are Torgersen, Dream, and Biscoe. The sex are either \"Male\" or \"Female\". Hence, the species, island and sex are nominal types of categorical data which has no order or ranking. \n",
     "\n",
-    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type in quantitative. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale and has a true zero point."
+    "The third (bill length), fourth (bill depth), fifth (flipper length) and sixth (body mass) columns are 64-bit floating-point numbers. It is a continuous data type, which is a type of quantitative data. These penguin body part measurements and weight can take an infinite value within a certain range. These are measured in ratio scale, which has equal intervals between values and has a true zero point."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "species column is a string.\n",
-      "island column is a string.\n",
-      "sex column is not a string.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# To specify the type of object:\n",
-    "\n",
-    "columns_to_check = ['species', 'island', 'sex']\n",
-    "\n",
-    "for column_name in columns_to_check:\n",
-    "    if pd.api.types.is_string_dtype(df[column_name]):\n",
-    "        print(f\"{column_name} column is a string.\")\n",
-    "    else:\n",
-    "        print(f\"{column_name} column is not a string.\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "# # OR we can check by 1 row and 1 column:\n",
-    "\n",
-    "# element = df.at[0, 'sex'] # if row is changed to 3 (line with missing data), it will output NOT a string\n",
-    "# if isinstance(element, str):\n",
-    "#     print(\"sex column is a string.\")\n",
-    "# else:\n",
-    "#     print(\"sex column is not a string.\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 344 entries, 0 to 343\n",
-      "Data columns (total 7 columns):\n",
-      " #   Column             Non-Null Count  Dtype  \n",
-      "---  ------             --------------  -----  \n",
-      " 0   species            344 non-null    object \n",
-      " 1   island             344 non-null    object \n",
-      " 2   bill_length_mm     342 non-null    float64\n",
-      " 3   bill_depth_mm      342 non-null    float64\n",
-      " 4   flipper_length_mm  342 non-null    float64\n",
-      " 5   body_mass_g        342 non-null    float64\n",
-      " 6   sex                333 non-null    object \n",
-      "dtypes: float64(4), object(3)\n",
-      "memory usage: 18.9+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "String is a more specialized text data type compared to the generic object data type. However, we can only do this if we are confident that these columns only contain strings and when we do not need to handle mixed data types or missing values within those columns. \n",
-    "\n",
-    "Hence, the reason why the sex column is listed as not a string is because of missing data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +276,7 @@
     "columns_to_check = ['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']\n",
     "\n",
     "for column_name in columns_to_check:\n",
-    "    element = df.at[0, column_name]\n",
+    "    element = df.at[0, column_name] # row 0\n",
     "    if isinstance(element, int):\n",
     "        print(f\"{column_name} column is an int.\")\n",
     "    else:\n",
@@ -371,10 +287,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bill length and bill depth columns are floats.\n",
+    "However, the penguins.csv file shows that the flipper length and body mass are int values. Why do they output as floats?\n",
     "\n",
-    "**HOWEVER, flipper length and body mass are actually integers in the penguins.csv data file.**\n",
+    "To check if the numeric columns contain int values and the object columns contain string values:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['species', 'island', 'sex']\n",
+      "['bill_length_mm', 'bill_depth_mm', 'flipper_length_mm', 'body_mass_g']\n",
+      "species Index(['Adelie', 'Chinstrap', 'Gentoo'], dtype='object')\n",
+      "island Index(['Biscoe', 'Dream', 'Torgersen'], dtype='object')\n",
+      "sex Index(['FEMALE', 'MALE'], dtype='object')\n",
+      "column bill_length_mm cannot be converted to int.\n",
+      "does bill_length_mm have a null value? True\n",
+      "column bill_depth_mm cannot be converted to int.\n",
+      "does bill_depth_mm have a null value? True\n",
+      "column flipper_length_mm cannot be converted to int.\n",
+      "does flipper_length_mm have a null value? True\n",
+      "column body_mass_g cannot be converted to int.\n",
+      "does body_mass_g have a null value? True\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_columns = [] \n",
+    "string_columns = []\n",
     "\n",
+    "for c in df.columns:\n",
+    "    if ('mm' in c) or ('g' in c): #  if there is mm or g in the column name, add to a numeric list\n",
+    "        numeric_columns.append(c) \n",
+    "    else: \n",
+    "        string_columns.append(c) # if not, put it in another list\n",
+    "\n",
+    "print(string_columns)\n",
+    "print(numeric_columns)\n",
+    "\n",
+    "for s in string_columns:\n",
+    "    print(s, df[s].astype('category').cat.categories) # print categories in string columns\n",
+    "\n",
+    "for n in numeric_columns:\n",
+    "    try:\n",
+    "        df[n].astype(int) # run a code that might cause exceptions\n",
+    "    except:\n",
+    "        print(f'column {n} cannot be converted to int.') # run this code when there is an exception\n",
+    "        print(f'does {n} have a null value?', df[n].isna().any()) # does this column contain a missing value?\n",
+    "    else:\n",
+    "        print(f'column {n} can be converted to int') # run this code if there are no exceptions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Null values cannot be converted to integer. Hence, the reason why the columns flipper length and body mass are considered as floats."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The rationale for selecting variable types for modeling depends on the question and types of analysis we want to perform. For example, we can use all the quantitative data to predict species classification and in regression analysis, where we can predict one variable from other features. Different variable types will also determine the appropriate type of data visualization techniques, such as pie charts, scatter plots and histograms. Understanding and specifying data types is important for the right analysis and to ensure that the operations are performed correctly."
    ]
   },
