categorical vs numerical

--- a/tasks.ipynb
+++ b/tasks.ipynb
@@ -362,10 +362,10 @@
    "metadata": {},
    "source": [
     "## **Task 3 : Penguins Data Set Distribution Model** \n",
-    "> For each of the variables in the penguins data set():\n",
+    "> For each of the variables in the penguins data set:\n",
     "\n",
-    "### Task Description:The task is to suggest what probability distribution from the numpy random distributions list is the most appropriate to model the variable\n",
-    "> "
+    "### Task Description:\n",
+    "> The task is to suggest what probability distribution from the numpy random distributions list is the most appropriate to model the variable."
    ]
   },
   {
@@ -381,8 +381,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np # for computational operations\n",
-    "import pandas as pd # for data loading from other sources and processing"
+    "import numpy as np # for computational operations, generating data samples\n",
+    "import pandas as pd # for data loading from other sources and processing\n",
+    "import matplotlib.pyplot as plt # for data plotting and distribution fitting\n",
+    "import seaborn as sns # for data plotting and distribution fitting\n"
    ]
   },
   {
@@ -503,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -532,11 +534,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Columns species, island and sex are nominal categorical variables, so no probability distributions are applicable.\n",
+    "\n",
+    "Probability distributions only apply on numerical columns bill_length_mm, bill_depth_mm, flipper_length_mm and body_mass_g."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### FOR COLUMN bill_length_mm:"
+   ]
   },
   {
    "cell_type": "code",
@@ -553,11 +564,11 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##### FOR COLUMN bill_depth_mm:"
+   ]
   },
   {
    "cell_type": "code",
@@ -567,11 +578,25 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### FOR COLUMN flipper_length_mm:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### FOR COLUMN body_mass_g:"
+   ]
   },
   {
    "cell_type": "code",
